Add mutation observer

--- a/test/basic.html
+++ b/test/basic.html
@@ -7,4 +7,5 @@
 <body>
     <p>Hello normal ascii</p>
     <p>🅷🅴🅻🅻🅾 🅱🅾🆇🅴🆂</p>
+    <p>𝑾𝒉𝒚 do ʸᵒᵘ 𝓱𝓪𝓽𝓮  🅰︎🅴🆂🆃🅷🅴🆃🅸🅲🆂 (<a href=https://mobile.twitter.com/FakeUnicode/status/1192622398580805632>source</a>)</p>
 </body>
