Improve tests more

--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,8 @@
     <title>Destylize Test Suite</title>
     <script src="test.js"></script>
 </head>
-<body>
+<body style='font-family:"sans-serif"'>
     <h1>Destylize Test Suite</h1>
-    <div id="allTests"></div>
+    <h2 id="test-stats"></h2>
+    <table id="all-tests"></table>
 </body>
