--- a/test/test.html
+++ b/test/test.html
@@ -9,4 +9,5 @@
     <h1>Destylize Test Suite</h1>
     <h2 id="test-stats"></h2>
     <table id="all-tests"></table>
+    <textarea id="test-text-area">🆃🅴🆇🆃 🅰🆁🅴🅰</textarea>
 </body>
