Initial implementation of replacement counts

--- a/src/popup.html
+++ b/src/popup.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
 </head>
 <body style="font-family:'sans-serif'">
-    <div style="min-width: 200px">
+    <div style="width: 300px">
         <h1 style="font-size:150%;">Destylize</h1>
         <p>Status: <b id="status">…</b></p>
+        <p id="counter">…</p>
         <button type="button" id="enable-toggle" onclick="enabled_toggled()">…</button>
         <script src="popup.js"></script>
     </div>
