Remove duplicate onclick handler (it's already in the JS)

--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,7 @@
       <p id="counter">…</p>
     </div> 
     <div class="row-container" id="toggle-button-container"> 
-      <button type="button" id="enable-toggle" onclick="enabled_toggled()">Start</button>
+      <button type="button" id="enable-toggle">Start</button>
     </div>
   </div>
 </body>
