Test that inline scripts are not modified

--- a/test/test.html
+++ b/test/test.html
@@ -9,5 +9,8 @@
     <h2 id="test-stats"></h2>
     <table id="all-tests"></table>
     <textarea id="test-text-area">🆃🅴🆇🆃 🅰🆁🅴🅰</textarea>
+    <script id="inline-script">
+        const inline_script_value = "🆃";
+    </script>
     <script src="test.js"></script>
 </body>
