Remove calls to .innerHTML

--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,11 @@
       Current status: <span id="status"></span>
     </div>
     <div class="row-container">
-      <p id="counter">…</p>
+      <p id="counter">
+        <span id='elements-fixed-prefix'></span>
+        <span id='elements-fixed'>…</span>
+        <span id="elements-fixed-suffix"></span>
+      </p>
     </div> 
     <div class="row-container" id="toggle-button-container"> 
       <button type="button" id="enable-toggle">Start</button>
