added links to popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -22,4 +22,8 @@
       <button type="button" id="enable-toggle">Start</button>
     </div>
   </div>
+  <div id="links">
+    <a id="report-bug" href="https://github.com/wmww/destylize/issues">Report Bug</a>
+    <a id="github" href="https://github.com/wmww/destylize">Github</a>
+  </div>
 </body>
