Change to single report issue button

--- a/src/popup.html
+++ b/src/popup.html
@@ -18,12 +18,11 @@
         <span id="elements-fixed-suffix"></span>
       </p>
     </div> 
-    <div class="row-container" id="toggle-button-container"> 
+    <div class="row-container button-container">
       <button type="button" id="enable-toggle">Start</button>
     </div>
-  </div>
-  <div id="links">
-    <a id="report-bug" href="https://github.com/wmww/destylize/issues">Report Bug</a>
-    <a id="github" href="https://github.com/wmww/destylize">Github</a>
+    <div class="row-container button-container">
+      <button type="button" id="report-bug">Report Issue</button>
+    </div>
   </div>
 </body>
